--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <div class='row'>
   <div class='col-md-5'>
     <ul>
-    <% for(i=0; i<lists.length; i++) { %>
+    <% for(i=0; i < lists.length; i++) { %>
       <li>
-        <a href='#'>
+        <a href='<%='/show-list/' + lists[i].id %>'>
           <%= lists[i].event %>(<%= lists[i].time %>)
         </a>
       </li>
